# archspec

./: .gitignore  LICENSE  pnpm-lock.yaml  readme.md  release-please-config.json  why-archspec.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: publish.yml  sda-checks.yml
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/src/sda/: __init__.py  classification.py  discovery.py  main.py
cli/src/sda/commands/: __init__.py  build.py  capture.py  check.py  graph.py  index.py  scaffold.py  status.py  viewer.py
cli/src/sda/templates/: OWNERS.yaml
cli/src/sda/templates/architecture/: classification.yaml
cli/src/sda/templates/architecture/adr/: TEMPLATE.md
cli/src/sda/templates/architecture/inbox/: PROB-TEMPLATE.yaml
cli/src/sda/templates/architecture/model/: services.yaml
cli/src/sda/validators/: __init__.py  adr.py  classification.py  owners.py  services.py
cli/tests/: __init__.py  test_build.py  test_capture.py  test_check.py  test_classification.py  test_discovery.py  test_graph.py  test_index.py  test_status.py  test_viewer.py
docs/: mental-model.md
docs/concepts/: classification.md  decisions.md  governance.md  integration.md  knowledge-graph.md  problems.md
docs/guides/: first-adr.md  getting-started.md  migration-to-partitions.md  multi-team.md
example/: OWNERS.yaml
example/architecture/: classification.yaml  index.yaml
schemas/: adr.schema.yaml  owners.schema.yaml  problem.schema.yaml  service.schema.yaml
scripts/: build-viewer.sh
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+97 files in other folders)
